# every_watch_firmware

./: .gitignore  CMakeLists.txt  FIRMWARE_PLAN.md  hardwarer_spec.md  pm_static.yml  prj.conf  sysbuild.conf  west.yml
boards/arm/every_watch/: Kconfig.defconfig  Kconfig.every_watch  board.cmake  board.yml  every_watch_nrf52833-pinctrl.dtsi  every_watch_nrf52833.dts  every_watch_nrf52833.yaml
child_image/: mcuboot.conf  mcuboot.overlay
src/: main.c
src/battery/: battery.c  battery.h
src/ble/: ble.c  ble.h
src/dfu/: dfu.c  dfu.h
src/display/: display.c  display.h
src/identity/: identity.c  identity.h
src/imu/: imu.c  imu.h
src/led_matrix/: led_matrix.c  led_matrix.h
src/light/: light.c  light.h
src/sand/: sand.c  sand.h
src/time_display/: time_display.c  time_display.h
sysbuild/: mcuboot.conf
